--- a/src/views/Home/styles.scss
+++ b/src/views/Home/styles.scss
@@ -79,10 +79,10 @@
         z-index: 10;
     }
     .wimb-text {
-        width: 534px;
-        height: 156px;
+        width: 35rem;
+        height: 10rem;
         font-weight: 800;
-        font-size: 85.2883px;
+        font-size: 4rem;
         line-height: 78px;
         letter-spacing: -0.04em;
         color: #FFFFFF;
@@ -828,8 +828,8 @@
         .wimb-text {
             height: auto;
             width: 100%;
-            font-size: 3.5rem;
-            line-height: 3.5rem;
+            font-size: 3.3rem;
+            line-height: 3.3rem;
             text-align: right !important;
             margin-bottom: 2.6rem;
             &:after {
